--- a/source/_posts/朋友圈的点赞实现.md
+++ b/source/_posts/朋友圈的点赞实现.md
@@ -19,13 +19,12 @@ tags: 设计思路
 
 查询朋友圈的时候需要遍历redis中的值，然后把uid替换成昵称。
 
-```
+```java
 @Override
 public Page<TimelineDetail> page(long uid, int page, int pageSize) {
     int startNumber = (page - 1) * 10;
     Collection<TimelineDetail> list = timelineDetailMapper.page(uid, startNumber, pageSize);
     list.forEach(i -> getLikedAndCount(i, uid));
-
     return new Page<TimelineDetail>(list, 0, pageSize, page);
 }
 
