--- a/source/_posts/责任链模式.md
+++ b/source/_posts/责任链模式.md
@@ -11,9 +11,11 @@ tags: 设计模式
 我对于责任链的理解就是如果***if else if else if ... else*** 这样的逻辑代码写多了难以维护，而且当我们再增加一个逻辑条件的时候不能很方便的扩展。
 
 
-###使用场景###
+### 使用场景
 
 来考虑这样一个功能:申请聚餐费用的管理。
+
+<!-- more -->
 
 　　很多公司都是这样的福利，就是项目组或者是部门可以向公司申请一些聚餐费用，用于组织项目组成员或者是部门成员进行聚餐活动。
 
@@ -30,7 +32,7 @@ tags: 设计模式
 　　需要把每位领导的处理独立出来，实现成单独的职责处理对象，然后为它们提供一个公共的、抽象的父职责对象，这样就可以在客户端来动态地组合职责链，实现不同的功能要求了。
 　　
 　
-###源代码###
+### 源代码
 
 抽象处理者角色类
 
